...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="yEn-Ku-nuK" id="v6s-G0-xaJ"/>
                            <outlet property="delegate" destination="yEn-Ku-nuK" id="y4C-OK-Jmw"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contacts" id="Ux0-bu-HVX">
                        <barButtonItem key="leftBarButtonItem" image="happy" id="4Z4-4n-r3h">
                            <connections>
                                <action selector="didPressBookmarksButton:" destination="yEn-Ku-nuK" id="6xe-Io-r0M"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="D0N-2h-Kgg">
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EQb-pa-hfE">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                                    <subviews>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TmJ-Ic-Wqd" customClass="CustomTextField" customModule="Contacts_App" customModuleProvider="target">
                                                            <rect key="frame" x="16" y="16" width="343" height="36"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="36" id="m2T-Ic-d8T"/>
                                                            </constraints>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="given-name"/>
                                                        </textField>
                                                        <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tHj-IO-47m" customClass="CustomTextField" customModule="Contacts_App" customModuleProvider="target"
                                                            <rect key="frame" x="16" y="60" width="343" height="36"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="HNM-m9-oMM"/>
                                                                <constraint firstAttribute="height" constant="36" id="UsZ-GL-qsF"/>
                                                            </constraints>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                            <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="family-name"/>
                                                        </textField>
                                                        <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Birthday" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ILO-5G-vGx" customClass="CustomTextField" customModule="Contacts_App" customModuleProvider="target">
                                                            <rect key="frame" x="16" y="104" width="343" height="36"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="Knk-PK-sVd"/>
                                                                <constraint firstAttribute="height" constant="36" id="Lcg-56-gMj"/>
                                                            </constraints>
                                                            <nil key="textColor"/>
...
                            <constraint firstItem="rQa-xI-gb1" firstAttribute="leading" secondItem="Vlw-Jv-ODm" secondAttribute="leading" id="bxa-oH-Q9Q"/>
                            <constraint firstAttribute="bottomMargin" secondItem="rQa-xI-gb1" secondAttribute="bottom" id="fqQ-3K-6l8"/>
                            <constraint firstItem="rQa-xI-gb1" firstAttribute="top" secondItem="DGS-1e-1q6" secondAttribute="topMargin" id="ggu-n4-2ae"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Vlw-Jv-ODm"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Contact" id="Z5E-2W-L4Q">
                        <barButtonItem key="rightBarButtonItem" title="Done" style="plain" id="vL4-Sd-7BM">
                            <connections>
                                <action selector="didPressDoneButton:" destination="TmA-uJ-0B9" id="clD-sP-Ieb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
