...
    // MARK: - Tableview delegate
    override func tableView(_ tableView: UITableView,
                            trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        
        let actionDelete = UIContextualAction(
            style: .destructive,
            title: "Delete") { [weak self] _, _, completion  in
                
                if self?.viewModel.isSearching ?? false {
                
                    Database.shared.removeContact(contact: self?.viewModel.searchResults?[indexPath.row], success: {
                    }, failure: { error in
                    })
...
